--- a/src/main/resources/static/css/bootstrap-datepicker3.standalone.css
+++ b/src/main/resources/static/css/bootstrap-datepicker3.standalone.css
@@ -1,9 +1,10 @@
 /*!
- * Datepicker for Bootstrap v1.7.0-dev (https://github.com/uxsolutions/bootstrap-datepicker)
+ * Datepicker for Bootstrap v1.6.4 (https://github.com/eternicode/bootstrap-datepicker)
  *
+ * Copyright 2012 Stefan Petre
+ * Improvements by Andrew Rowls
  * Licensed under the Apache License v2.0 (http://www.apache.org/licenses/LICENSE-2.0)
  */
-
 .datepicker {
   border-radius: 4px;
   direction: ltr;
@@ -13,9 +14,6 @@
 }
 .datepicker.datepicker-rtl {
   direction: rtl;
-}
-.datepicker.datepicker-rtl.dropdown-menu {
-  left: auto;
 }
 .datepicker.datepicker-rtl table tr td span {
   float: right;
@@ -646,10 +644,6 @@ fieldset[disabled] .datepicker table tr td span.active.disabled:hover.focus {
 .datepicker tfoot tr th:hover {
   background: #eeeeee;
 }
-.datepicker .prev.disabled,
-.datepicker .next.disabled {
-  visibility: hidden;
-}
 .datepicker .cw {
   font-size: 10px;
   width: 12px;
@@ -681,33 +675,4 @@ fieldset[disabled] .datepicker table tr td span.active.disabled:hover.focus {
   margin-left: -5px;
   margin-right: -5px;
 }
-.datepicker.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  float: left;
-  min-width: 160px;
-  list-style: none;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-  color: #333333;
-  font-size: 13px;
-  line-height: 1.42857143;
-}
-.datepicker.dropdown-menu th,
-.datepicker.datepicker-inline th,
-.datepicker.dropdown-menu td,
-.datepicker.datepicker-inline td {
-  padding: 0px 5px;
-}
-/*# sourceMappingURL=bootstrap-datepicker3.standalone.css.map */
+/*# sourceMappingURL=bootstrap-datepicker3.css.map */
